--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     
     <div class="slider">
+      <div class="title">
+        Collection Photo
+      </div>
         <div class="form">
             <div class="item">
                 <div class="content">
